Fix footer note not aligning correctly

--- a/assets/css/footer/footer.css
+++ b/assets/css/footer/footer.css
@@ -56,6 +56,7 @@
         bottom: 0;
         margin: 100px 110px;
         position: absolute;
+        right: 0;
         width: 400px;
     }
 }
